--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Fun Bus Travel Agency - Solution</title>
 
@@ -16,9 +17,45 @@
 
 <body>
 
-  
-     
   <div class="container home">
+
+  	<div class="header">
+
+		<div class="navigation-panel"> 
+
+		<div class="logo">
+			<h5> Fun Bus<h5>
+		<!-- end logo -->
+		</div>
+
+
+		<nav>
+			<a href="">Home</a>
+			<a href="">Aboout</a>
+			<a href="">Blog</a>
+			<a href="">Contact</a>
+		</nav>
+
+		<!-- end navigation-panel -->
+		</div>
+
+		
+		<div class="img-content">
+			<img src="img/fun-bus.jpg" alt="Fun Bus">
+		<!-- end img-content -->
+		</div>
+
+		<div class="text-content">
+			<h2> Welcome to Fun Bus!</h2>
+
+			<p> Traveling expedition modern, clean webdesign blogger clean website theme website modern. Design pretty design, travelblogger adventure WordPress wanderlust theme blogger website expedition theme travelblogger. Adventure fun traveler pretty design website expedition.</p>
+
+		<!-- end text-content -->
+		</div>
+
+	<!-- end header -->
+	</div> 
+
    
     <section class="content-section">
       <div class="text-content">
